more notes on isomorphisms

--- a/UMPnotes.tex
+++ b/UMPnotes.tex
@@ -344,6 +344,11 @@ We might want to prove automatically the following property of the ring $(\iota_
   \iota_{\iota_N M}(\iota_N((r))
 \end{equation}
 
+Note that I have written these propositions in a way that is slightly unnatural to write in set theoretic notation,
+but it is the way that it might be stated in a proof assistant. The intended meaning is that
+$\exists r,m,n \in R$ means that these variables all have type $R$, and $m \in M$ means that $M$ can be interpreted as a
+subset of $R$, i.e. a function $R \to Prop$, where $m \in M$ that $M(m)$ is true.
 
+In order to write a proof of this in a univalent Type theory, it is first necessary
 
 \end{document}
